# jasp-multimodal-rag

./: .env  .gitignore  README.md  app.py  main.py  pyproject.toml
backend/: main.py
backend_api/: main.py
data/: jasp_rag_ground_truth.txt  rag jasp data.xlsx
data/evaluation/: retrieval_evaluation.csv  retrieval_results_sheet1.csv
data/processed/chunks/: github_jasp-stats_jaspMixedModels__MixedModelsBGLMM.json  github_jasp-stats_jaspMixedModels__MixedModelsBLMM.json  github_jasp-stats_jaspMixedModels__MixedModelsGLMM.json  github_jasp-stats_jaspMixedModels__MixedModelsLMM.json  github_jasp-stats_jaspRegression__Correlation.json  github_jasp-stats_jaspRegression__CorrelationBayesian.json  github_jasp-stats_jaspRegression__GeneralizedLinearModel.json  github_jasp-stats_jaspRegression__RegressionLinear.json  github_jasp-stats_jaspRegression__RegressionLinearBayesian.json  github_jasp-stats_jaspRegression__RegressionLogistic.json  manual_Statistical-Analysis-in-JASP-A-guide-for-students-2025.json  video_Introduction_to_JASP_APRaBFC2lEQ_chunks.json  video_JASP_repeated_measures_ANOVA_and_post_hoc_tests_CWRmc2t1Vlo_chunks.json
data/processed/pdf/final_enriched/: Statistical-Analysis-in-JASP-A-guide-for-students-2025.json
data/processed/pdf/image_description/: Statistical-Analysis-in-JASP-A-guide-for-students-2025.json
data/processed/pdf/markdown/: Statistical-Analysis-in-JASP-A-guide-for-students-2025.md
data/processed/pdf/text/: Statistical-Analysis-in-JASP-A-guide-for-students-2025.json
data/processed/pdf/text_with_images/: Statistical-Analysis-in-JASP-A-guide-for-students-2025.json
data/processed/video/: Introduction_to_JASP_APRaBFC2lEQ.json  JASP_repeated_measures_ANOVA_and_post_hoc_tests_CWRmc2t1Vlo.json
data/raw_github/: github_list.json
data/raw_pdf/: downloaded_pdfs.json  pdf_list.json
data/raw_video/: video.json
data/test_QA/: Qs.txt  test_QA.json
data/vector_store/chroma_db/: chroma.sqlite3  docstore.json  index_store.json
frontend/: app.py  test.py
notebooks/: 01_pdf_loader_llamaindex.ipynb  01_pdf_loader_llamaindex_section_based.ipynb  01_pdf_loader_page-level-summarization.ipynb  01_pdf_retrieval.ipynb  01_pdf_split.ipynb  01_pdf_testQA.ipynb  01_pdf_toc.ipynb  02_video_loader.ipynb  03_video_query.ipynb  04_evaluation.ipynb  04_evaluation_clear_save.ipynb  04_finetune_k.ipynb  RAG_evaluation.ipynb  RAG_metrics_combined.csv  df_results copy.csv  draft_evaluation.ipynb  evaluation copy.ipynb  evaluation.ipynb  fails.xlsx  grid_search_results.csv  metrics.csv  results_ndcg.csv  results_success.csv
notebooks/data/chroma/: chroma.sqlite3
scripts/: ingest_manual.py  ingest_video.py  query_manual.py
src/embedding/: embedding_store.py
src/evaluation/: add_retrieved_results.py  create_Q_temp.py
src/generation/: generation.py
src/ingestion/: captioner.py  data_create.py  github_md_loader.py  pdf_load_text_images.py  pdf_loader.py  pdf_text_add_image_description.py  pdf_text_loader.py  video_loader.py  video_noimage.py  video_transcript_loader.py
src/pipelines/: build_database.py  build_database_v2.py  data_query.py  generate_answer.py
src/retrieval/: embedder.py  index.py  pdf_query.py  retrieval.py  splitter.py
src/splitting/: github_md_split.py  manual_split.py  split_long_sections.py  text_split.py  video_split.py
src/utils/: ids.py  logger.py
