[project]
name = "jasp-multimodal-rag"
version = "0.1.0"
description = "Multimodal RAG backend for the JASP manual assistant"
authors = [
  { name = "Yuan, Vivi (BDS) – UvA", email = "ywxiu0811@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "streamlit",
  "pydantic",
  "pyyaml",
  "python-dotenv",
  "langchain (>=0.3.27,<0.4.0)",
  "langchain-community",
  "chromadb",
  "sentence-transformers",
  "transformers",
  "open-clip-torch",
  "pillow",
  "pymupdf",
  "tqdm",
  "pypdf (>=6.0.0,<7.0.0)",
  "youtube-transcript-api (>=0.6.2,<0.7.0)",
  "pytube (>=15.0.0,<16.0.0)",
  "yt-dlp (>=2025.9.23,<2026.0.0)",
  "openai-whisper @ git+https://github.com/openai/whisper.git",
  "watchdog (>=6.0.0,<7.0.0)",
  "pytest (>=8.4.2,<9.0.0)",
  "ipykernel (>=6.30.1,<7.0.0)",
  "ipywidgets (>=8.1.7,<9.0.0)",
  "rank-bm25 (>=0.2.2,<0.3.0)",
  "llama-index (>=0.14.7,<0.15.0)",
  "requests (>=2.32.5,<3.0.0)",
  "pdf2image (>=1.17.0,<2.0.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "llama-index-embeddings-huggingface (>=0.6.1,<0.7.0)",
  "llama-index-core (>=0.14.6,<0.15.0)",
  "llama-index-vector-stores-chroma (>=0.5.3,<0.6.0)",
  "llama-index-llms-ollama (>=0.9.0,<0.10.0)",
  "llama-index-retrievers-bm25 (>=0.6.5,<0.7.0)",
  "ollama (>=0.6.0,<0.7.0)",
  "flagembedding (>=1.3.5,<2.0.0)",
  "llama-index-postprocessor-flag-embedding-reranker (>=0.4.1,<0.5.0)"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "jasp-multimodal-rag"
version = "0.1.0"
packages = [{ include = "src" }]


[tool.pytest.ini_options]
pythonpath = ["src"]


[dependency-groups]
dev = [
    "yt-dlp (>=2025.9.23,<2026.0.0)"
]
